versions/v2.9/modules/en/pages/cluster-admin/manage-clusters/persistent-storage/set-up-existing-storage.adoc
= Setting up Existing Storage
:page-languages: [en, zh]
:revdate: 2024-09-27
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/manage-clusters/create-kubernetes-persistent-storage/manage-persistent-storage/set-up-existing-storage.adoc 
:product-path: cluster-admin/manage-clusters/persistent-storage/set-up-existing-storage.adoc
:experimental:
ifeval::["{build-type}" != "community"]
:xref-cluster-project-roles: xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
:xref-longhorn: xref:integrations/longhorn/longhorn.adoc
:xref-vsphere-storage-example: xref:cluster-admin/manage-clusters/persistent-storage/examples/vsphere-storage.adoc
:xref-amazon-ebs-storage: xref:cluster-admin/manage-clusters/persistent-storage/examples/persistent-storage-in-amazon-ebs.adoc
:xref-nfs-storage: xref:cluster-admin/manage-clusters/persistent-storage/examples/nfs-storage.adoc
:xref-about-persistent-storage: xref:cluster-admin/manage-clusters/persistent-storage/about-persistent-storage.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-cluster-project-roles: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
:xref-longhorn: xref:integrations-in-rancher/longhorn/index.adoc
:xref-vsphere-storage-example: xref:how-to-guides/new-user-guides/manage-clusters/provisioning-storage-examples/vsphere-storage.adoc
:xref-amazon-ebs-storage: xref:how-to-guides/new-user-guides/manage-clusters/provisioning-storage-examples/persistent-storage-in-amazon-ebs.adoc
:xref-nfs-storage: xref:how-to-guides/new-user-guides/manage-clusters/provisioning-storage-examples/nfs-storage.adoc
:xref-about-persistent-storage: xref:how-to-guides/new-user-guides/manage-clusters/create-kubernetes-persistent-storage/manage-persistent-storage/about-persistent-storage.adoc
endif::[]

This section describes how to set up existing persistent storage for workloads in Rancher.

[NOTE]
====

This section assumes that you understand the Kubernetes concepts of persistent volumes and persistent volume claims. For more information, refer to the section on {xref-about-persistent-storage}[how storage works.]
====


To set up storage, follow these steps:

. <<_1_set_up_persistent_storage,Set up persistent storage.>>
. <<_2_add_a_persistentvolume_that_refers_to_the_persistent_storage,Add a PersistentVolume that refers to the persistent storage.>>
. <<_3_use_the_storage_class_for_pods_deployed_with_a_statefulset,Use the Storage Class for Pods Deployed with a StatefulSet.>>

== Prerequisites

* To create a persistent volume as a Kubernetes resource, you must have the `Manage Volumes` {xref-cluster-project-roles}#_project_role_reference[role.]
* If you are provisioning storage for a cluster hosted in the cloud, the storage and cluster hosts must have the same cloud provider.

== 1. Set up persistent storage

Creating a persistent volume in Rancher will not create a storage volume. It only creates a Kubernetes resource that maps to an existing volume. Therefore, before you can create a persistent volume as a Kubernetes resource, you must have storage provisioned.

The steps to set up a persistent storage device will differ based on your infrastructure. We provide examples of how to set up storage using {xref-vsphere-storage-example}[vSphere,] {xref-nfs-storage}[NFS,] or Amazon's {xref-amazon-ebs-storage}[EBS.]

If you have a pool of block storage, and you don't want to use a cloud provider, Longhorn could help you provide persistent storage to your Kubernetes cluster. For more information, see {xref-longhorn}[Cloud Native Storage with Longhorn].

== 2. Add a PersistentVolume that refers to the persistent storage

These steps describe how to set up a PersistentVolume at the cluster level in Kubernetes.

. Click *☰ > Cluster Management*.
. Go to the cluster where you want to add a persistent volume and click *Explore*.
. In the left navigation bar, click menu:Storage[Persistent Volumes].
. Click *Create*.
. Enter a *Name* for the persistent volume.
. Select the *Volume Plugin* for the disk type or service that you're using. When adding storage to a cluster that's hosted by a cloud provider, use the cloud provider's plug-in for cloud storage. For example, if you have a Amazon EC2 cluster and you want to use cloud storage for it, you must use the `Amazon EBS Disk` volume plugin.
. Enter the *Capacity* of your volume in gigabytes.
. Complete the *Plugin Configuration* form. Each plugin type requires information specific to the vendor of disk type. For help regarding each plugin's form and the information that's required, refer to the plug-in's vendor documentation.
. Optional: In the *Customize* form, configure the https://kubernetes.io/docs/concepts/storage/persistent-volumes/#access-modes[access modes.] This options sets how many nodes can access the volume, along with the node read/write permissions. The https://kubernetes.io/docs/concepts/storage/persistent-volumes/#access-modes[Kubernetes Documentation] includes a table that lists which access modes are supported by the plugins available.
. Optional: In the *Customize* form, configure the https://kubernetes.io/docs/concepts/storage/persistent-volumes/#mount-options[mount options.] Each volume plugin allows you to specify additional command line options during the mounting process. Consult each plugin's vendor documentation for the mount options available.
. Click *Create*.

*Result:* Your new persistent volume is created.

== 3. Use the Storage Class for Pods Deployed with a StatefulSet

StatefulSets manage the deployment and scaling of Pods while maintaining a sticky identity for each Pod. In this StatefulSet, we will configure a VolumeClaimTemplate. Each Pod managed by the StatefulSet will be deployed with a PersistentVolumeClaim based on this VolumeClaimTemplate. The PersistentVolumeClaim will refer to the PersistentVolume that we created. Therefore, when each Pod managed by the StatefulSet is deployed, it will be bound a PersistentVolume as defined in its PersistentVolumeClaim.

You can configure storage for the StatefulSet during or after workload creation.

The following steps describe how to assign existing storage to a new StatefulSet:

. Click *☰ > Cluster Management*.
. Go to the cluster where you want to configure storage for the StatefulSet and click *Explore*.
. In the left navigation bar, click menu:Workload[StatefulSets].
. Click *Create*.
. Choose the namespace where the workload will be deployed.
. Enter a name for the StatefulSet.
. On the *Volume Claim Templates* tab, click *Add Claim Template*.
. Click *Use an existing Persistent Volume*.
. In the Persistent Volumes field, select the Persistent Volume that you created.
. In the *Mount Point* field, enter the path that the workload will use to access the volume.
. Click *Launch*.

*Result:* When the workload is deployed, it will make a request for the specified amount of disk space to the Kubernetes master. If a PV with the specified resources is available when the workload is deployed, the Kubernetes master will bind the PV to the PVC.

The following steps describe how to assign persistent storage to an existing workload:

. Click *☰ > Cluster Management*.
. Go to the cluster where you want to configure storage for the StatefulSet and click *Explore*.
. In the left navigation bar, click menu:Workload[StatefulSets].
. Go to the workload that you want to add the persistent storage to. Click *⋮ > Edit*.
. On the *Volume Claim Templates* tab, click *Add Claim Template*.
. Click *Use an existing Persistent Volume*.
. In the Persistent Volumes field, select the Persistent Volume that you created.
. In the *Mount Point* field, enter the path that the workload will use to access the volume.
. Click *Launch*.

*Result:* The workload will make a request for the specified amount of disk space to the Kubernetes master. If a PV with the specified resources is available when the workload is deployed, the Kubernetes master will bind the PV to the PVC.
